feat: addresses endpoints & docs
